force-app/main/default/objects/EnvelopeReminderConfiguration__c/EnvelopeReminderConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Configurazione Sollecito Documentazione</label>
</CustomObject>