force-app/main/default/objects/EnvelopeReminderConfiguration__c/fields/CalloutSyncCase__c.field-meta.xml
<CustomField>
    <fullName>CalloutSyncCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se true il sistema gestisce in Sync sia request che response</description>
    <inlineHelpText>Inserisci true se desideri che request e response vengano gestite in sync</inlineHelpText>
    <label>Callout Sync Case </label>
    <type>Checkbox</type>
</CustomField>