force-app/main/default/objects/EnvelopeReminderConfiguration__c/fields/CasePhase__c.field-meta.xml
<CustomField>
    <fullName>CasePhase__c</fullName>
    <description>Indica le Fasi per le quali è necessario estrarre i Case eleggibili per il sollecito</description>
    <inlineHelpText>Inserisci le Fasi per le quali è necessario estrarre i Case eleggibili per il sollecito separati da ;</inlineHelpText>
    <label>Case - Fase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>