force-app/main/default/objects/EnvelopeReminderConfiguration__c/fields/CaseType__c.field-meta.xml
<CustomField>
    <fullName>CaseType__c</fullName>
    <description>Indica i processi per i quali è necessario estrarre i Case eleggibili per il sollecito</description>
    <inlineHelpText>Inserire i process per i quali è necessario estrarre i Case eleggibili per il sollecito separati da ;</inlineHelpText>
    <label>Case - Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>