force-app/main/default/objects/EnvelopeReminderConfiguration__c/fields/OrderCommodity__c.field-meta.xml
<CustomField>
    <fullName>OrderCommodity__c</fullName>
    <description>Indica le commodity per le quali è necessario estrarre gli Order eleggibili per il sollecito</description>
    <inlineHelpText>Inserisci le commodity per le quali è necessario estrarre gli Order eleggibili per il sollecito separate da ;</inlineHelpText>
    <label>Order - Servizio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>